--- a/locales/en.json
+++ b/locales/en.json
@@ -48,5 +48,6 @@
   "test_prompt_label": "Test Prompt",
   "compare_button": "Compare Llama 3.1 vs Mistral",
   "comparison_spinner": "Running comparison...",
-  "error_occurred": "An error occurred: {error}"
+  "error_occurred": "An error occurred: {error}",
+  "skills_extraction_failed": "No skills could be extracted. The README might be too short or the model failed."
 }
